# Image-Animation-Turbo-Boost

./: .gitignore  README.md
FOMM/: export_onnx.py  requirements.txt
FOMM/config/: vox-256.yaml  vox-adv-256.yaml
FOMM/demo/TRT/: api.py  demo.py  main.py  trt_model.py  utils.py
FOMM/modules/: dense_motion.py  generator.py  keypoint_detector.py  util.py
TPSMM/: export_onnx.py  requirements.txt
TPSMM/demo/ONNXRuntime/cpp/: CMakeLists.txt  README.md  demo.cpp
TPSMM/demo/ONNXRuntime/cpp/include/: tpsmm.hpp
TPSMM/demo/ONNXRuntime/cpp/ort/mac/lib/libonnxruntime.1.9.0.dylib.dSYM/Contents/: Info.plist
TPSMM/demo/ONNXRuntime/cpp/ort/x64/include/ort/: onnxruntime_c_api.h
TPSMM/demo/ONNXRuntime/cpp/src/: tpsmm.cpp
TPSMM/demo/ONNXRuntime/python/: demo.py
TPSMM/demo/OpenVINO/cpp/: CMakeLists.txt  demo.cpp
TPSMM/demo/OpenVINO/cpp/include/: tpsmm.hpp
TPSMM/demo/OpenVINO/cpp/src/: tpsmm.cpp
TPSMM/demo/OpenVINO/python/: demo.py
TPSMM/demo/Torch/: demo.py
TPSMM/modules/: dense_motion.py  dense_motion_inpainting.py  grid_sample.py  inpainting_network.py  keypoint_detector.py  tpsmm.py  util.py
